Fix spacing of listencards in UserFeed page

--- a/listenbrainz/webserver/static/css/timeline.less
+++ b/listenbrainz/webserver/static/css/timeline.less
@@ -73,7 +73,7 @@
 			}
 			.event-content {
 				padding-top: 1em;
-				padding-left: 3.5em;
+				padding-left: 2.5em;
 			}
 		}
 	}
